@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 4.1.5 update 3
 ----------------------------------------------------------------------
-  1 Enhancement
+  2 Enhancements
   2 Bug fixes
   5 Localisation updates
 ----------------------------------------------------------------------
@@ -11,6 +11,9 @@
 
   - Add Moodle .php files filter
   https://sourceforge.net/p/omegat/feature-requests/1407/
+
+  - Allow user to choose which MT suggestion to insert
+  https://sourceforge.net/p/omegat/feature-requests/1406/
 
   Bug fixes:
 
